# Noviforma

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.claude/: settings.json  settings.local.json
apps/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/ui-react/: index.html  package-lock.json  package.json  tsconfig.json
apps/ui-react/src/: App.tsx  styles.css
apps/ui-react/src/components/: AssetGrid.tsx  CanvasAssetViewport.tsx  CanvasViewport.tsx  Inspector.tsx  ProjectBrowser.tsx
apps/ui-react/src/lib/: asset-urls.ts  database.ts
apps/ui/src/: App.css  App.tsx  index.tsx
apps/ui/src/components/: GridControls.css  GridControls.tsx  GridViewport.css  GridViewport.tsx  Inspector.css  Inspector.tsx  Modal.css  Modal.tsx  ProgressBar.css  ProgressBar.tsx  ProjectBrowser.css  ProjectBrowser.tsx  Settings.css  Settings.tsx  StressControls.css  StressControls.tsx
apps/ui/src/lib/: asset-urls.ts  database.ts  settings.ts  tauri.ts  viewport.ts  webgpu-renderer.ts
apps/ui/src/shaders/: grid.wgsl
assets/: README.md
crates/noviforma-app/: Cargo.toml  noviforma.db
crates/noviforma-app/src/: main.rs
crates/noviforma-core/: Cargo.toml
crates/noviforma-core/src/: database.rs  indexer.rs  lib.rs  models.rs  scanner.rs  thumbs.rs
crates/noviforma-renderer/: Cargo.toml
crates/noviforma-renderer/src/: instance.rs  lib.rs  pipeline.rs  renderer.rs  state.rs  stats.rs  texture.rs  viewer_pipeline.rs
crates/noviforma-renderer/src/shaders/: grid.wgsl  viewer.wgsl
docs/: current-architecture.md  design.md  engineering.md  gpu-renderer-integration.md  noviforma-m0-checklist.md  rewrite-plan.md  ui-architecture.md  ui-quick-start.md
src-tauri/: Cargo.toml  noviforma.db  tauri.conf.json
src-tauri/src/: database_state.rs  main.rs  renderer_state.rs
src-tauri/src/commands/: database.rs  mod.rs  renderer.rs
