[workspace]
members = [
    "src-tauri",
    "crates/noviforma-renderer",
]
resolver = "2"

[workspace.dependencies]
wgpu = "0.18"
winit = "0.29"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
