[package]
name = "noviforma"
version = "0.1.0"
description = "Shot/Asset Browser with Node AI Workflow"
authors = ["Noviforma Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
noviforma-renderer = { path = "../crates/noviforma-renderer" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
