[package]
name = "noviforma"
version = "0.1.0"
description = "Shot/Asset Browser with Node AI Workflow"
authors = ["Noviforma Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rayon = "1.10"
noviforma-core = { path = "../crates/noviforma-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
